# opset

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pull_request_template.md  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/workflows/: test.yml
makefiles/: Makefile.security
opset/: __init__.py  configurator.py  gcp_secret_handler.py  utils.py
tests/: __init__.py  configurator_test.py  conftest.py  gcp_secret_handler_test.py  utils.py  utils_test.py
