[tool.poetry]
name = "opset"
version = "1.4.1"
description = "A library for simplifying the configuration of Python applications at all stages of deployment."
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/ElementAI/opset"
repository = "https://github.com/ElementAI/opset"
documentation = "https://github.com/ElementAI/opset"
keywords = ["config", "management", "configuration", "logging", "setup"]
authors = ["Element AI Inc. <hello@elementai.com>", "Alexandre Jutras <alexandre.jutras@elementai.com>", "Emilio Assuncao <emilio.assuncao@elementai.com>", "Guy Dumais <guy@elementai.com>", "Marc-André Dufresne <marc-andre.dufresne@elementai.com>"]
packages = [
    {include = "opset"}
]

[tool.poetry.dependencies]
python = "^3.6"
munch = "^2.3"
pytz = ">=2018.9"
pyyaml = ">=3.13,<6"
structlog = ">=19.1,<21"
colorama = "^0.4.1"  # for structlog colors

[tool.poetry.dev-dependencies]
coveralls = "^1.7"
flake8 = "^3.6"
pytest = "^4.1"
pytest-cov = "^2.6"
pytest-sugar = "^0.9.2"
black = "^19.10b0"
flake8-black = "^0.1.1"
isort = "^4.3.21"
flake8-isort = "^2.8.0"
flake8-bugbear = "^20.1.2"
flake8-docstrings = "^1.5.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"

