[project]
name = "opset"
version = "4.2.0"
description = "A library for simplifying the configuration of Python applications at all stages of deployment."
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/MarcDufresne/opset"
repository = "https://github.com/MarcDufresne/opset"
documentation = "https://github.com/MarcDufresne/opset"
keywords = ["config", "management", "configuration", "logging", "setup"]
authors = [
    { name = "Marc-André Dufresne", email = "marc.andre.dufresne@gmail.com"},
    { name = "Alexandre Jutras", email = "jutras.alexandre@gmail.com"},
]
packages = [
    {include = "opset"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "munch>=4.0,<5.0",
    "pytz>=2023.3",
    "pyyaml>=6.0,<7.0",
    "structlog>=23.1,<24.0",
    "colorama>=0.4,<1.0",
    "setuptools>=70.0",
    "pydantic>=2.4.2,<3.0.0",
]

[project.optional-dependencies]
gcp = [
    "google-cloud-secret-manager>=2.16.4,<3.0.0"
]

[dependency-groups]
dev = [
    "coveralls>=3.3.1,<4.0.0",
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-sugar>=0.9.7,<1.0.0",
    "pytest-mock>=3.11.1,<4.0.0",
    "ruff>=0.12.7,<0.13.0",
    "mypy>=1.4.1,<2.0.0",
    "types-setuptools>=70.0",
    "types-pyyaml>=6.0.12.10,<7.0.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "F",
    "E",
    "T20",
    "I",
    "T10"
]
ignore = ["E501"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803", "E203"]

[tool.mypy]
python_version = 3.11
namespace_packages = true
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["opset"]
